--- a/ProcessListerSelector.css
+++ b/ProcessListerSelector.css
@@ -4,6 +4,11 @@
 #ProcessListerFiltersForm {
   display: none !important; }
 
+#ProcessListerTable .ProcessListerTable {
+  width: 100% !important;
+  min-width: 0 !important;
+  max-width: none !important; }
+
 .pw-table-sortable th:hover, table.ProcessListerTable thead th:hover {
   text-decoration: none;
   cursor: default; }
@@ -14,5 +19,6 @@
   height: 30px;
   position: relative;
   text-align: center;
+  margin-left: 6px;
   margin-top: 10px;
   z-index: 5; }
